[package]
name = "anansii"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
itertools = "0.13.0"
rand = { version = "0.10.1", features = ["chacha"] }
regex = "1.11.1"
thiserror = "2.0.3"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "stress_test"
harness = false

[profile.release]
debug = true # adds symbols to the release profile
